# 2GIS_Task

./: CMakeLists.txt  README.md  TODO
src/: AppOptions.cpp  CMakeLists.txt  ProcessCRC.cpp  ProcessManager.cpp  ProcessWCount.cpp  WorkerCRC.cpp  WorkerManager.cpp  WorkerStateWCount.cpp  WorkerWCount.cpp  common.cpp  main.cpp
src/StateWordCounter/: BeginScope.cpp  BeginScope.h  Context.cpp  Context.h  EndScope.cpp  EndScope.h  IState.h  Miscellanea.cpp  Miscellanea.h  NewWord.cpp  NewWord.h  PEndMarks.cpp  PEndMarks.h  Resembling.cpp  Resembling.h  utils.h
src/include/: AppOptions.h  IProcess.h  IWorker.h  ProcessCRC.h  ProcessManager.h  ProcessWCount.h  WorkerCRC.h  WorkerManager.h  WorkerStateWCount.h  WorkerWCount.h  common.h  constans.h
test_data/: test_1.tst  test_w_0.tst  test_w_1.tst  test_w_punc.tst  test_w_scope_1.tst  test_w_scope_2.tst  test_w_wiki.tst
tests/: CMakeLists.txt  test_CRCWorker.cpp  test_SWCountWorker.cpp  test_WCountWorker.cpp  test_foo.cpp  test_utils.h
